Deployments/YAMLs/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:    
  name: nginx-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-pod  
  template:
    metadata:
      labels:
        app: nginx-pod
    spec:
      containers:
      - image: nginx
        name: nginx-app
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
        ports:
          - containerPort: 80
      imagePullSecrets:
      - name: aks-workshop-secret
